samples/_failures_safe/1761370850_cb36e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53d58919.c: In function ‘main’:
./samples/SAFE/__tmp_53d58919.c:168:10: error: ‘get_user’ undeclared (first use in this function)
  168 |     if (!get_user
      |          ^~~~~~~~
./samples/SAFE/__tmp_53d58919.c:168:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_53d58919.c:168:18: error: expected ‘)’ at end of input
  168 |     if (!get_user
      |        ~         ^
      |                  )
./samples/SAFE/__tmp_53d58919.c:168:5: error: expected declaration or statement at end of input
  168 |     if (!get_user
      |     ^~
